fix:Fixed strange spacing when there are fewer than 4 results.

--- a/src/components/Events/Event.css
+++ b/src/components/Events/Event.css
@@ -1,7 +1,7 @@
 .footlightSearchWidget .container {
   display: flex;
   align-items: flex-start;
-  padding: 8px 0px 8px 24px;
+  padding: 10px 0px 10px 24px;
   margin-right: 16px;
   min-height: 55px;
 }
