--- a/src/components/Events/EventsList.css
+++ b/src/components/Events/EventsList.css
@@ -3,9 +3,8 @@
   padding: 0;
   width: 100%;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
-  height: 100%;
+  margin-inline: auto;
 }
 
 .footlightSearchWidget .tabs-list {
