--- a/src/components/Panel/ResultsPanel.css
+++ b/src/components/Panel/ResultsPanel.css
@@ -72,7 +72,7 @@
 }
 
 .footlightSearchWidget .panel-content .result-header {
-  padding: 32px 30px 16px;
+  padding: 32px 30px 20px;
   display: flex;
   justify-content: flex-start;
   text-transform: uppercase;
